parsing the data link